# sparse-tensor-compiler

./: .ocamlformat  LICENSE  README.md  dune-project  matmul.mlir  matmul.sp  sparse-tensor-compiler.opam  test.sp  weird_add.mlir
src/: dune  main.ml
src/codegen/: codegen.ml  dune
src/core/: ast.ml  core.ml  dune  environment.ml  utils.ml
src/frontend/: dune  einsum.ml  frontend.ml  lexer.mll  parser.mly  tokens.ml
src/ir/: dune  ir.ml  linalg.ml  tensor_runtime.ml
test/: dune
